--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 		<label for="login">Login</label>
 		<input type="text" id="login" name="login" placeholder="Votre login">
 
+		<label for="nom">Nom</label>
+		<input type="text" id="nom" name="nom" placeholder="Votre nom">
+
+		<label for="prenom">Prenom</label>
+		<input type="text" id="prenom" name="prenom" placeholder="Votre prenom">
+
+		<label for="age">age</label>
+		<input type="text" id="age" name="age" placeholder="Votre age">
+
 		<label for="mdp">Mot de passe</label>
 		<input type="text" id="mdp" name="mdp" placeholder="Votre mot de passe">
 
