--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
 
 		<input type="submit" name="submit" value="Envoyer">
 	  </form>
+
+	  <h6>Règlementation RGPD</h6>
+		<p>Le règlement général sur la protection des données (RGPD) est entré en application le 25 mai 2018 pour mieux encadrer le traitement des données.</p>
+
+	  <p>J'approuve l'utilisation de mes données personnelle dans le traitement limite</p>
+	  <form>
+		<div>
+			<input type="checkbox" id="validation">
+			<label for="validation">Je m'inscris à la newsletter</label>
+		  </div>
+	  </form>
+
+	  
 	</div>
  </body>
 </html>
