--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  <form>
 		<div>
 			<input type="checkbox" id="validation">
-			<label for="validation">Je m'inscris à la newsletter</label>
+			<label for="validation">Valider</label>
 		  </div>
 	  </form>
 
